...
            .navigationTitle("Create a new asset")
            .navigationBarTitleDisplayMode(.inline)
            .alert(
                "Failed to generate asset",
                isPresented: $viewModel.didFailToGenerate
            ) {
                Button("OK", role: .cancel) { }
            }
        }
    }
    
    
    // MARK: Subviews
    
    private var modePicker: some View {
        Picker("What is your favorite color?", selection: $viewModel.isManualModeOn) {
            Text("Manual")
                .tag(true)
                .accessibilityIdentifier("Manual button")
            
            Text("Auto")
                .tag(false)
                .accessibilityIdentifier("Auto button")
        }
        .pickerStyle(.segmented)
...
